doc updates